# 3DSand-CPP

./: .gitignore  CMakeLists.txt  Main.cpp
depends/GLAD/include/glad/: glad.h
depends/GLAD/src/: glad.c
res/shaders/: afterEffectFragment.glsl  mainFragment.glsl  mainRayUtils.glsl  worldGeneration.glsl
src/core/: AttachmentManager.cpp  AttachmentManager.h  GlobalVariables.cpp  GlobalVariables.h  ImGuiManager.cpp  ImGuiManager.h  Loader.cpp  Loader.h  RNG.cpp  RNG.h  RawModel.cpp  RawModel.h  SSBO.cpp  SSBO.h  Signal.h  TextureManager.cpp  TextureManager.h
src/core/imageBuffers/: ImageBuffer.cpp  ImageBuffer.h  ImageBuffer2D.cpp  ImageBuffer2D.h  ImageBuffer3D.cpp  ImageBuffer3D.h
src/core/inputs/: Mouse.cpp  Mouse.h
src/display/: DisplayManager.cpp  DisplayManager.h
src/elements/: Element.cpp  Element.h  ElementRegistry.cpp  ElementRegistry.h  ElementUpdater.cpp  ElementUpdater.h
src/elements/solids/moveables/: Dirt.h  Glass.h  Light.h
src/elements/weirds/: Any.h  Empty.h
src/game/: Camera.cpp  Camera.h
src/game/world/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  World.cpp  World.h
src/renderers/: MasterRenderer.cpp  MasterRenderer.h
src/shaders/: AfterEffectShader.cpp  AfterEffectShader.h  BasicShader.cpp  BasicShader.h  ComputeShader.cpp  ComputeShader.h  ComputeShaders.cpp  ComputeShaders.h  DisplayShader.cpp  DisplayShader.h  RayTracerShader.cpp  RayTracerShader.h  WorldGenerationShader.cpp  WorldGenerationShader.h
src/threads/: BasicThread.cpp  BasicThread.h  ChunkGenerationThread.cpp  ChunkGenerationThread.h
src/utils/: Maths.h  Pair_Hash.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
